Updated instructions and additional resources, moved to repo

--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 
     <main>
       <section class="intro">
-        <h2>About Us</h2>
-        <p>Delicious Street Eats is a food truck that has been serving up the best street food in town for over a decade. We are passionate about bringing you fresh, tasty, and unique street food experiences.</p>
-        <p>Our menu features a variety of delicious options, from classic favorites like the Bacon Pub Burger to unique creations like our Tacos de Carnitas. Each dish is prepared with the freshest ingredients and a lot of love.</p>
-        <p>We believe in creating a vibrant and welcoming atmosphere for our customers. Our food truck is not just a place to eat, but a community hub where people can come together and enjoy great food and good company.</p>
-        <p>Our journey started with a simple idea: to share our love for street food with the world. Over the years, we have grown and evolved, but our commitment to quality and customer satisfaction remains the same. Come visit us and be part of our story!</p>
+        <h2 class="text-center">About Us</h2>
+        <p class="text-center">Delicious Street Eats is a food truck that has been serving up the best street food in town for over a decade. We are passionate about bringing you fresh, tasty, and unique street food experiences.</p>
+        <p class="text-center">Our menu features a variety of delicious options, from classic favorites like the Bacon Pub Burger to unique creations like our Tacos de Carnitas. Each dish is prepared with the freshest ingredients and a lot of love.</p>
+        <p class="text-center">We believe in creating a vibrant and welcoming atmosphere for our customers. Our food truck is not just a place to eat, but a community hub where people can come together and enjoy great food and good company.</p>
+        <p class="text-center">Our journey started with a simple idea: to share our love for street food with the world. Over the years, we have grown and evolved, but our commitment to quality and customer satisfaction remains the same. Come visit us and be part of our story!</p>
       </section>
     </main>
 
