--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delicious Street Eats</title>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Example: Linking Fredericka the Great for headings and Roboto for paragraphs -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="text-center">
@@ -20,37 +23,58 @@
 
     <main>
       <section class="intro">
-        <h2>Welcome to Delicious Street Eats!</h2>
-        <p>We serve the most mouth-watering street food in town. Check out our menu below and visit us to satisfy your cravings.</p>
-        <p>Our food truck has been a local favorite for over a decade, known for its vibrant atmosphere and delicious, freshly prepared dishes. Whether you're in the mood for a juicy burger, crispy fish and chips, flavorful tacos, or a hearty breakfast, we have something to satisfy every craving.</p>
-        <p>All of our dishes are made from the freshest ingredients, and our unique recipes keep customers coming back for more. Don't just take our word for it—come visit us and taste the difference yourself. Learn more about our journey and values on our <a href="about.html">About</a> page.</p>
+        <h2 class="text-center">Welcome to Delicious Street Eats!</h2>
+        <p class="text-center">
+          We serve the most mouth-watering street food in town. Check out our
+          menu below and visit us to satisfy your cravings.
+        </p>
+        <p class="text-center">
+          Our food truck has been a local favorite for over a decade, known for
+          its vibrant atmosphere and delicious, freshly prepared dishes. Whether
+          you're in the mood for a juicy burger, crispy fish and chips,
+          flavorful tacos, or a hearty breakfast, we have something to satisfy
+          every craving.
+        </p>
+        <p class="text-center">
+          All of our dishes are made from the freshest ingredients, and our
+          unique recipes keep customers coming back for more. Don't just take
+          our word for it—come visit us and taste the difference yourself. Learn
+          more about our journey and values on our
+          <a href="about.html" class="hover-text">About</a> page.
+        </p>
       </section>
       <section class="menu">
-        <h2>Entrées</h2>
+        <h2 class="text-center">Entrées</h2>
         <div class="card-container">
           <div class="card">
-            <img src="assets/images/bacon-pub-burger.jpg" alt="Bacon Pub Burger">
+            <img
+              src="assets/images/bacon-pub-burger.jpg"
+              alt="Bacon Pub Burger" />
             <h3>Bacon Pub Burger</h3>
             <p class="card-number">Card 1.</p>
             <p>What a beast of a burger.</p>
             <p class="price">$17.99</p>
           </div>
           <div class="card">
-            <img src="assets/images/fish-and-chips.jpg" alt="Fish and Chips">
+            <img src="assets/images/fish-and-chips.jpg" alt="Fish and Chips" />
             <h3>Fish & Chips</h3>
             <p class="card-number">Card 2.</p>
             <p>Such fish. Many chips.</p>
             <p class="price">$14.99</p>
           </div>
           <div class="card">
-            <img src="assets/images/tacos-de-carnitas.jpg" alt="Tacos de Carnitas">
+            <img
+              src="assets/images/tacos-de-carnitas.jpg"
+              alt="Tacos de Carnitas" />
             <h3>Tacos de Carnitas</h3>
             <p class="card-number">Card 3.</p>
             <p>Mucho gusto, mi taco pequeñito.</p>
             <p class="price">$12.99</p>
           </div>
           <div class="card">
-            <img src="assets/images/breakfast-of-champions.jpg" alt="Breakfast of Champions">
+            <img
+              src="assets/images/breakfast-of-champions.jpg"
+              alt="Breakfast of Champions" />
             <h3>Breakfast of Champions</h3>
             <p class="card-number">Card 4.</p>
             <p>The best way to start your day.</p>
